2006-05-01  Aaron Bockover  <aaron@abock.org>

	Fix a locking bug that caused crashes (BGO #340306)

	* src/Banshee.Base/Source.cs: Added virtual TracksMutex object that
	can be used to properly lock the Tracks collection

	* src/PlayerInterface.cs:
	* src/PlaylistModel.cs: lock SourceManager.ActiveSource.TracksMutex
	when performing operations on SourceManager.ActiveSource.Tracks
	
	* src/Banshee.Base/Sources/LibrarySource.cs:
	* src/Banshee.Base/Sources/PlaylistSource.cs: implement TracksMutext
	by inlining the internal collection SyncRoot mutex and locking when
	necessary

2006-04-20  Aaron Bockover  <aaron@abock.org>

	* src/Banshee.MediaEngine/Helix/HelixRemotePlayer.cs: Added GetIsLive

	* src/Banshee.MediaEngine/Helix/HelixRemotePlayerEngine.cs: Added 
	http support to SourceCapabilities, added more RealPlayer-specific 
	file formats to ExplicitDecoderCapabilities; implemented CanSeek by
	calling GetIsLive on the remote player; properly handle buffering 
	and title messages

2006-04-17  Aaron Bockover  <aaron@abock.org>

	* banshee.mdp: Updated MonoDevelop project

	* configure.ac: Check for gmcs, will probably start using it soon

	* data/banshee.schemas.in: Added schema for IOBackend

	* src/Banshee.Base/GConfKeys.cs: Added IOBackend

	* src/Banshee.Base/ImportManager.cs: Use Banshee.IO.IOProxy for reading
	files/directories

	* src/Banshee.Base/Makefile.am: Added Banshee.IO files

	* src/Banshee.Base/IO/IOProxy.cs: Loads IO types and instantiates proper
	backend based on IOBackend gconf key; provides File and Directory
	properties

	* src/Banshee.Base/IO/Interfaces.cs: Provides IIOConfig, IFile, and 
	IDirectory interfaces for writing new IO backends

	* src/Banshee.Base/IO/SystemIO.cs: IO backend implementations based
	on the .NET System.IO namespace (exists for Win32 porting... one day, 
	but of course works fine on Linux too)

	* src/Banshee.Base/IO/Unix.cs: IO backend implementations based on